@@ -14,5 +14,4 @@
  - build script
  - disable "Refresh/Purge this queue" by default, to have them disabled before selecting queue
  - support for older MSMQ (without subqueues)
- - detect when MSMQ is not installed
  - config option to disable RSB integration
