@@ -1,3 +1,5 @@
+ - detect when MSMQ is not installed
+
 MsmqFastView 0.3.0 2011-10-09 "Agile Viewer"
  - added application icon
  - added extensibility point to add additional message details
